[metadata]
name = cd_v_partition
version = attr: cd_v_partition.__version__
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://github.com/shahashka/causal_discovery_via_partitioning
author = Ashka Shah
author_email = shahashka@uchicago.edu
license = MIT License

[options]
include_package_data = True
packages = cd_v_partition
install_requires =
    causaldag
    netgraph
    cdt==0.6.0
    graphical_models
    matplotlib==3.5.*
    networkx==3.*
    numpy
    pandas==1.*
    scikit-learn==1.*
    scipy==1.9.*
    rpy2==3.5.*
python_requires = >=3.8
[options.packages.find]
exclude =
    datasets
    examples
